[gd_scene load_steps=10 format=2]

[ext_resource path="res://Map Setup/HubWorldRes.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Map Setup/MapScripts/HubWorld.gd" type="Script" id=2]
[ext_resource path="res://Map Setup/Pause Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Obstacles/Popup Tip/Popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Obstacles/EnergyShop/Shop.tscn" type="PackedScene" id=5]
[ext_resource path="res://Obstacles/EnergyShop/ShopMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Obstacles/DirectionSign/directionSign.glb" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="HubMap" type="GridMap"]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 65540, 0, 2, 65541, 0, 2, 65542, 0, 2, 65543, 0, 2, 65544, 0, 2, 131077, 0, 2, 131078, 0, 2, 131079, 0, 2, 131080, 0, 2, 65540, 1, 2, 65541, 1, 2, 65542, 1, 2, 65543, 1, 2, 65544, 1, 2, 65545, 1, 2, 65546, 1, 2, 131075, 1, 2, 131076, 1, 2, 131077, 1, 2, 131078, 1, 2, 131080, 1, 2, 131081, 1, 2, 131082, 1, 2, 131083, 1, 2, 65540, 2, 2, 65541, 2, 2, 65542, 2, 2, 65543, 2, 2, 65544, 2, 2, 65545, 2, 2, 65546, 2, 2, 65547, 2, 2, 65548, 2, 2, 131074, 2, 2, 131075, 2, 2, 131076, 2, 2, 131081, 2, 2, 131082, 2, 2, 131083, 2, 2, 131084, 2, 2, 6, 3, 4, 65536, 3, 2, 65537, 3, 2, 65538, 3, 2, 65539, 3, 2, 65540, 3, 2, 65541, 3, 2, 65542, 3, 2, 65543, 3, 2, 65544, 3, 2, 65545, 3, 2, 65546, 3, 2, 65547, 3, 2, 65548, 3, 2, 65549, 3, 2, 131071, 3, 2, 131072, 3, 2, 131073, 3, 2, 131074, 3, 2, 131075, 3, 2, 131076, 3, 2, 131079, 3, 1, 131080, 3, 1, 131083, 3, 2, 131084, 3, 2, 131085, 3, 2, 131086, 3, 2, 4, 4, 4, 5, 4, 4, 6, 4, 4, 7, 4, 4, 8, 4, 4, 65536, 4, 2, 65537, 4, 2, 65538, 4, 2, 65539, 4, 2, 65540, 4, 2, 65545, 4, 2, 65546, 4, 2, 65547, 4, 2, 65548, 4, 2, 65549, 4, 2, 65550, 4, 2, 131071, 4, 2, 131072, 4, 2, 131073, 4, 2, 131074, 4, 2, 131075, 4, 2, 131076, 4, 2, 131081, 4, 1, 131082, 4, 1, 131083, 4, 1, 131084, 4, 2, 131085, 4, 2, 131086, 4, 2, 131087, 4, 2, 131088, 4, 2, 196607, 4, 2, 4, 5, 4, 5, 5, 4, 6, 5, 4, 7, 5, 4, 8, 5, 4, 9, 5, 4, 10, 5, 4, 12, 5, 4, 65536, 5, 2, 65537, 5, 2, 65538, 5, 2, 65539, 5, 2, 65547, 5, 2, 65548, 5, 2, 65549, 5, 2, 65550, 5, 2, 131071, 5, 2, 131072, 5, 2, 131073, 5, 2, 131074, 5, 2, 131075, 5, 2, 131083, 5, 1, 131086, 5, 2, 131087, 5, 2, 131088, 5, 2, 131089, 5, 2, 131090, 5, 2, 196607, 5, 2, 4, 6, 4, 5, 6, 4, 6, 6, 4, 7, 6, 4, 8, 6, 4, 9, 6, 4, 10, 6, 4, 11, 6, 4, 12, 6, 4, 13, 6, 2, 65536, 6, 2, 65537, 6, 2, 65538, 6, 2, 65539, 6, 2, 65549, 6, 2, 65550, 6, 2, 65551, 6, 2, 65552, 6, 2, 65553, 6, 2, 65554, 6, 2, 131071, 6, 2, 131072, 6, 2, 131073, 6, 1, 131075, 6, 2, 131089, 6, 2, 131090, 6, 2, 131091, 6, 2, 131092, 6, 2, 131093, 6, 2, 196607, 6, 2, 4, 7, 4, 5, 7, 4, 6, 7, 4, 7, 7, 4, 8, 7, 4, 9, 7, 4, 10, 7, 4, 11, 7, 4, 12, 7, 4, 13, 7, 2, 14, 7, 2, 15, 7, 2, 16, 7, 2, 17, 7, 2, 18, 7, 2, 19, 7, 2, 65536, 7, 2, 65537, 7, 2, 65538, 7, 2, 65539, 7, 2, 65551, 7, 2, 65554, 7, 2, 65555, 7, 2, 65556, 7, 2, 65557, 7, 2, 131071, 7, 2, 131073, 7, 1, 131090, 7, 1, 131091, 7, 1, 131093, 7, 2, 131094, 7, 2, 196606, 7, 2, 196607, 7, 2, 3, 8, 4, 4, 8, 4, 5, 8, 4, 6, 8, 4, 7, 8, 4, 8, 8, 4, 9, 8, 4, 10, 8, 4, 11, 8, 4, 12, 8, 4, 13, 8, 4, 14, 8, 2, 15, 8, 2, 19, 8, 2, 65536, 8, 2, 65537, 8, 2, 65538, 8, 2, 65539, 8, 2, 65551, 8, 2, 65556, 8, 2, 65557, 8, 2, 131070, 8, 2, 131071, 8, 2, 131073, 8, 1, 131094, 8, 2, 196606, 8, 2, 196607, 8, 2, -65520, 8, 2, -65519, 8, 2, -65518, 8, 2, 3, 9, 4, 4, 9, 4, 5, 9, 4, 6, 9, 4, 7, 9, 4, 8, 9, 4, 9, 9, 4, 10, 9, 4, 11, 9, 4, 12, 9, 4, 13, 9, 4, 14, 9, 2, 15, 9, 2, 20, 9, 2, 65536, 9, 2, 65537, 9, 2, 65538, 9, 2, 65543, 9, 1, 65544, 9, 2, 65545, 9, 2, 65550, 9, 2, 65551, 9, 2, 65557, 9, 2, 65558, 9, 2, 131070, 9, 2, 131071, 9, 2, 131072, 9, 1, 131073, 9, 1, 131094, 9, 2, 196605, 9, 2, 196606, 9, 2, -131057, 9, 2, -131056, 9, 2, -131055, 9, 2, -131054, 9, 2, -131052, 9, 2, -131051, 9, 2, -131050, 9, 2, -65521, 9, 2, -65517, 9, 2, 2, 10, 1048580, 3, 10, 4, 4, 10, 4, 5, 10, 4, 6, 10, 4, 7, 10, 4, 8, 10, 4, 9, 10, 4, 10, 10, 4, 11, 10, 4, 12, 10, 4, 13, 10, 4, 14, 10, 2, 15, 10, 2, 20, 10, 2, 21, 10, 2, 22, 10, 2, 65536, 10, 2, 65537, 10, 2, 65538, 10, 1048579, 65545, 10, 2, 65546, 10, 1, 65551, 10, 1, 65558, 10, 2, 131071, 10, 2, 131072, 10, 1, 131094, 10, 2, 196605, 10, 2, 196606, 10, 2, 196607, 10, 2, -131058, 10, 2, -131057, 10, 2, -131056, 10, 2, -131055, 10, 2, -131054, 10, 2, -131053, 10, 2, -131052, 10, 2, -131051, 10, 2, -131050, 10, 2, -65522, 10, 2, -65521, 10, 2, -65517, 10, 2, -65516, 10, 2, 3, 11, 4, 4, 11, 4, 5, 11, 4, 6, 11, 4, 7, 11, 4, 8, 11, 4, 9, 11, 4, 10, 11, 4, 11, 11, 4, 12, 11, 4, 13, 11, 2, 14, 11, 2, 15, 11, 2, 21, 11, 2, 22, 11, 2, 65536, 11, 2, 65537, 11, 2, 65538, 11, 2, 65551, 11, 1, 65558, 11, 2, 131094, 11, 2, 196606, 11, 2, 196607, 11, 2, -131058, 11, 2, -131057, 11, 2, -131056, 11, 2, -131055, 11, 2, -131054, 11, 2, -131053, 11, 2, -131051, 11, 2, -131050, 11, 2, -65522, 11, 2, -65516, 11, 2, -65515, 11, 2, 4, 12, 4, 5, 12, 4, 6, 12, 4, 7, 12, 4, 8, 12, 4, 9, 12, 4, 10, 12, 4, 11, 12, 4, 12, 12, 4, 13, 12, 2, 14, 12, 0, 15, 12, 2, 21, 12, 2, 22, 12, 2, 65536, 12, 2, 65537, 12, 2, 65538, 12, 2, 65539, 12, 2, 65540, 12, 1, 65541, 12, 1048577, 65551, 12, 1, 65558, 12, 2, 131094, 12, 2, 196606, 12, 2, 196607, 12, 2, -131058, 12, 2, -131057, 12, 2, -131056, 12, 2, -131055, 12, 2, -131054, 12, 2, -131053, 12, 2, -65522, 12, 2, -65516, 12, 2, -65515, 12, 2, 5, 13, 4, 6, 13, 4, 7, 13, 4, 8, 13, 4, 9, 13, 4, 10, 13, 4, 11, 13, 4, 12, 13, 4, 13, 13, 2, 14, 13, 0, 15, 13, 2, 21, 13, 2, 22, 13, 2, 65537, 13, 2, 65538, 13, 2, 65539, 13, 2, 65540, 13, 2, 65541, 13, 1, 65542, 13, 1048577, 65551, 13, 1, 65558, 13, 2, 131072, 13, 2, 131073, 13, 1, 131074, 13, 1, 131094, 13, 2, 131095, 13, 2, 196607, 13, 2, -131058, 13, 2, -131057, 13, 2, -131056, 13, 2, -131055, 13, 2, -131054, 13, 2, -131053, 13, 2, -65522, 13, 2, -65516, 13, 2, -65515, 13, 2, 5, 14, 2, 6, 14, 2, 7, 14, 655364, 8, 14, 4, 9, 14, 4, 10, 14, 4, 11, 14, 4, 12, 14, 4, 13, 14, 2, 14, 14, 2, 15, 14, 2, 21, 14, 2, 22, 14, 2, 65537, 14, 2, 65538, 14, 2, 65539, 14, 2, 65540, 14, 2, 65541, 14, 2, 65551, 14, 1, 65558, 14, 2, 131072, 14, 2, 131073, 14, 2, 131074, 14, 1, 131075, 14, 1, 131095, 14, 2, 196607, 14, 2, -131057, 14, 2, -131056, 14, 2, -131055, 14, 2, -131054, 14, 2, -65522, 14, 2, -65521, 14, 2, -65517, 14, 2, -65516, 14, 2, 5, 15, 2, 6, 15, 2, 7, 15, 655364, 8, 15, 4, 9, 15, 4, 10, 15, 4, 11, 15, 4, 12, 15, 4, 13, 15, 2, 14, 15, 2, 15, 15, 2, 19, 15, 2, 20, 15, 2, 21, 15, 2, 22, 15, 2, 65536, 15, 2, 65537, 15, 2, 65538, 15, 2, 65539, 15, 2, 65540, 15, 2, 65551, 15, 1, 65558, 15, 2, 131072, 15, 2, 131073, 15, 2, 131075, 15, 655361, 131094, 15, 1, 131095, 15, 2, 196607, 15, 2, -131056, 15, 2, -131055, 15, 2, -65521, 15, 2, -65520, 15, 2, -65519, 15, 2, -65518, 15, 2, -65517, 15, 2, -65516, 15, 2, 4, 16, 2, 5, 16, 2, 6, 16, 655364, 7, 16, 655364, 8, 16, 655364, 9, 16, 4, 15, 16, 2, 16, 16, 2, 17, 16, 2, 18, 16, 2, 19, 16, 2, 20, 16, 2, 21, 16, 2, 65536, 16, 2, 65537, 16, 2, 65538, 16, 2, 65539, 16, 2, 65540, 16, 2, 65541, 16, 1, 65546, 16, 2, 65547, 16, 2, 65548, 16, 2, 65549, 16, 2, 65550, 16, 2, 65551, 16, 1, 65557, 16, 2, 65558, 16, 2, 131071, 16, 2, 131072, 16, 2, 131073, 16, 2, 131075, 16, 655361, 131085, 16, 1, 131095, 16, 2, 196606, 16, 2, 196607, 16, 2, 4, 17, 2, 5, 17, 1048580, 6, 17, 5, 7, 17, 655364, 8, 17, 2, 9, 17, 2, 15, 17, 2, 16, 17, 2, 17, 17, 2, 18, 17, 2, 19, 17, 2, 20, 17, 2, 65536, 17, 2, 65537, 17, 2, 65538, 17, 0, 65539, 17, 2, 65546, 17, 2, 65547, 17, 2, 65549, 17, 2, 65551, 17, 2, 65552, 17, 2, 65553, 17, 2, 65554, 17, 2, 65555, 17, 2, 65556, 17, 2, 65557, 17, 2, 131071, 17, 2, 131072, 17, 2, 131084, 17, 2, 131085, 17, 2, 131086, 17, 2, 131087, 17, 2, 131088, 17, 2, 131089, 17, 1, 131090, 17, 1, 131092, 17, 2, 131093, 17, 2, 131094, 17, 2, 131095, 17, 2, 196606, 17, 2, 196607, 17, 2, 4, 18, 4, 5, 18, 2, 6, 18, 1048580, 7, 18, 1048580, 8, 18, 2, 16, 18, 2, 65536, 18, 2, 65537, 18, 2, 65538, 18, 0, 65539, 18, 2, 65540, 18, 0, 65541, 18, 1, 65545, 18, 2, 65546, 18, 2, 65547, 18, 2, 131070, 18, 2, 131071, 18, 2, 131072, 18, 2, 131082, 18, 1, 131083, 18, 1, 131084, 18, 2, 131085, 18, 2, 131086, 18, 2, 131087, 18, 2, 131088, 18, 2, 131089, 18, 2, 131090, 18, 2, 131091, 18, 2, 131092, 18, 2, 196606, 18, 2, 196607, 18, 2, 5, 19, 2, 6, 19, 2, 7, 19, 2, 65536, 19, 2, 65537, 19, 2, 65538, 19, 0, 65539, 19, 0, 65540, 19, 2, 65543, 19, 1, 65544, 19, 2, 65545, 19, 2, 65546, 19, 2, 65547, 19, 2, 131070, 19, 2, 131071, 19, 2, 131072, 19, 2, 131076, 19, 1, 131083, 19, 1441793, 131084, 19, 2, 131085, 19, 2, 131086, 19, 2, 131087, 19, 2, 196606, 19, 2, 196607, 19, 2, 7, 20, 4, 65536, 20, 2, 65537, 20, 2, 65538, 20, 2, 65539, 20, 0, 65540, 20, 0, 65541, 20, 0, 65542, 20, 0, 65543, 20, 2, 65544, 20, 0, 65545, 20, 0, 65546, 20, 2, 65547, 20, 2, 131070, 20, 2, 131071, 20, 2, 131072, 20, 2, 131073, 20, 2, 131083, 20, 1441793, 131084, 20, 2, 131085, 20, 2, 131086, 20, 2, 196606, 20, 2, 196607, 20, 2, 65536, 21, 2, 65537, 21, 2, 65538, 21, 2, 65539, 21, 2, 65540, 21, 0, 65541, 21, 2, 65542, 21, 0, 65543, 21, 2, 65544, 21, 0, 65545, 21, 2, 65546, 21, 2, 65547, 21, 2, 131070, 21, 2, 131071, 21, 2, 131072, 21, 2, 131073, 21, 2, 131074, 21, 1, 131075, 21, 1, 131082, 21, 1, 131083, 21, 1441793, 131084, 21, 2, 131085, 21, 2, 131086, 21, 2, 196606, 21, 2, 196607, 21, 2, 65536, 22, 2, 65537, 22, 2, 65538, 22, 2, 65539, 22, 2, 65540, 22, 2, 65541, 22, 0, 65542, 22, 2, 65543, 22, 2, 65544, 22, 2, 65545, 22, 2, 65546, 22, 2, 65547, 22, 2, 131072, 22, 2, 131073, 22, 2, 131074, 22, 2, 131075, 22, 1, 131079, 22, 1, 131081, 22, 1, 131082, 22, 1, 131083, 22, 2, 131084, 22, 2, 131085, 22, 2, 131086, 22, 2, 131087, 22, 2, 196606, 22, 2, 196607, 22, 2, 65538, 23, 2, 65539, 23, 2, 65540, 23, 2, 65541, 23, 2, 65542, 23, 2, 65543, 23, 2, 65544, 23, 2, 65545, 23, 2, 65546, 23, 2, 131072, 23, 2, 131073, 23, 2, 131074, 23, 2, 131075, 23, 2, 131076, 23, 2, 131080, 23, 1, 131081, 23, 1441793, 131082, 23, 2, 131083, 23, 2, 131084, 23, 2, 131085, 23, 2, 131086, 23, 2, 196606, 23, 2, 196607, 23, 2, 65539, 24, 2, 65540, 24, 2, 65541, 24, 2, 65542, 24, 2, 65543, 24, 2, 65544, 24, 2, 65545, 24, 2, 131072, 24, 2, 131073, 24, 2, 131074, 24, 2, 131075, 24, 2, 131076, 24, 2, 131079, 24, 1, 131080, 24, 1, 131081, 24, 2, 131082, 24, 2, 131083, 24, 2, 131084, 24, 2, 131085, 24, 2, 196607, 24, 2, 131074, 25, 2, 131075, 25, 2, 131076, 25, 2, 131077, 25, 2, 131078, 25, 2, 131079, 25, 2, 131080, 25, 2, 131081, 25, 2, 131079, 26, 2, 131080, 26, 2 )
}
script = ExtResource( 2 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="ReturnMenu" parent="." instance=ExtResource( 3 )]

[node name="ShopMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Portal" type="Area" parent="."]
transform = Transform( 1.60648, 0, 0, 0, 1, 0, 0, 0, 1.97823, 5.64367, 3.09197, 21.0074 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Portal"]
transform = Transform( 1.6611, 0, 0, 0, 1, 0, 0, 0, 1.44751, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Popup" parent="Portal" instance=ExtResource( 4 )]
transform = Transform( 2.09156, 0, 0, 0, 2.09156, 0, 0, 0, 2.09156, 0.18511, 0.895352, -0.582428 )

[node name="Spatial" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.7053, -13.4138, 25.1634 )

[node name="Shop" type="Area" parent="."]
transform = Transform( 1.07021, 0, 0, 0, 1, 0, 0, 0, 3.6072, 28.6089, 2.43528, 26.5613 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Shop"]
transform = Transform( 2.14184, 0, 0, 0, 1, 0, 0, 0, 0.999999, -0.0367088, 0.772689, -0.00349379 )
shape = SubResource( 2 )

[node name="Popup" parent="Shop" instance=ExtResource( 4 )]
transform = Transform( 1.93318, 0, 0, 0, 1.93318, 0, 0, 0, 1.93318, 0.828381, 1.17655, 0 )

[node name="directionSign" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.0454676, 0, 0.998966, 0, 1, 0, -0.998966, 0, 0.0454676, 18.8478, 0.484799, 20.6152 )

[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
[connection signal="body_exited" from="Portal" to="." method="_on_Portal_body_exited"]
[connection signal="body_entered" from="Shop" to="." method="_on_Shop_body_entered"]
[connection signal="body_exited" from="Shop" to="." method="_on_Shop_body_exited"]
